# pkgwatch

./: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
fixtures/clean/: PKGBUILD
fixtures/malicious-npm/: PKGBUILD
src/: cli.rs  config.rs  main.rs  output.rs
src/scanner/: ai.rs  aur.rs  ioc.rs  malware_list.rs  mod.rs  pkgbuild.rs
