[package]
name = "pkgwatch"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "AUR PKGBUILD risk scanner and paru wrapper"
readme = "README.md"
repository = "https://github.com/bkbalci/pkgwatch"
homepage = "https://github.com/bkbalci/pkgwatch"
keywords = ["archlinux", "aur", "security", "pkgbuild", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
colored = "2"
dirs = "5"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "process", "rt-multi-thread", "time"] }
toml = "0.8"
